refactor(auth): 重构权限缓存刷新逻辑
- 新增 ExtendPermissionService 接口和实现类，用于获取指定角色和菜单类型的权限
- 重构 RefreshPermission 类，使用新的权限服务接口
- 更新 SysMenuService 接口和实现类，添加缓存刷新相关方法
- 新增 SysRoleService 接口和实现类，用于获取有效的角色ID
- 优化 RedisUtils 类，明确缓存操作的范围
- 更新 Lua脚本，为缓存设置过期时间